--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "3.4.x"
-    , "jade": "*"
+    "name": "application-name", 
+    "version": "0.0.1", 
+    "private": true, 
+    "dependencies": {
+      "express": "3.4.x", 
+      "jade": "*"
+  },
+  "engines" : {
+  	"node": "0.10.x",
+  	"npm": "1.4.x"
   }
 }
